# agy-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README_EN.md  README_JA.md  README_ZH-TW.md  architecture.md  cli-capabilities.md  comparison-with-cli-wrappers.md  examples.md  installation.md  output-strategy.md  release.md  security.md
prompts/: AGENTS.md  CLAUDE.md  antigravity-system.md
scripts/: check_release_artifacts.py
skills/antigravity/agy-collaboration/: SKILL.md
skills/antigravity/agy-collaboration/references/: collaboration.md
skills/claude/collaborating-with-antigravity/: SKILL.md
skills/claude/collaborating-with-antigravity/references/: security.md  usage.md
skills/claude/collaborating-with-antigravity/scripts/: agy_bridge.py
skills/codex/collaborating-with-antigravity/: SKILL.md
skills/codex/collaborating-with-antigravity/references/: prompt-patterns.md  security.md  usage.md
skills/codex/collaborating-with-antigravity/scripts/: agy_bridge.py
src/agy_mcp/: __init__.py  __main__.py  bridge.py  cli.py  config.py  doctor.py  install.py  models.py  routing.py  safety.py  server.py  session_store.py  supervisor.py  utils.py  worktree.py
src/agy_mcp/_skill_bodies/antigravity/: SKILL.md
src/agy_mcp/_skill_bodies/antigravity/references/: collaboration.md
src/agy_mcp/_skill_bodies/claude/: SKILL.md
src/agy_mcp/_skill_bodies/claude/references/: usage.md
src/agy_mcp/_skill_bodies/codex/: SKILL.md
src/agy_mcp/_skill_bodies/codex/references/: security.md  usage.md
src/agy_mcp/_skill_bodies/codex/scripts/: agy_bridge.py
src/agy_mcp/adapters/: __init__.py  agy.py  base.py  gemini.py  protocol.py
tests/: conftest.py  test_adapters_agy.py  test_adapters_gemini.py  test_bridge.py  test_capability_detection.py  test_config.py  test_install_skill_drift.py  test_mcp_server.py  test_models.py  test_protocol_translator.py  test_release_artifacts.py  test_safety.py  test_session_store.py  test_skill_bridge_forwarders.py  test_supervisor.py  test_utils.py  test_version.py  test_worktree.py
tests/fixtures/: fake_agy_print.py  fake_agy_with_log.py  fake_gemini_streamjson.py  sample_klog.txt
