[project]
name = "agy-mcp"
version = "0.1.0"
description = "Skill-first, MCP-second bridge from Claude Code / OpenAI Codex to Google Antigravity CLI (agy)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Boulea7" },
]
keywords = [
    "mcp",
    "antigravity",
    "agy",
    "gemini",
    "claude-code",
    "codex",
    "skill",
    "agent",
    "bridge",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.21.2",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
agymcp = "agy_mcp.cli:main"
agy-bridge = "agy_mcp.bridge:main"
agy-install-skill = "agy_mcp.install:main"

[project.urls]
Homepage = "https://github.com/Boulea7/agy-mcp"
Repository = "https://github.com/Boulea7/agy-mcp"
Issues = "https://github.com/Boulea7/agy-mcp/issues"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agy_mcp"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "src/agy_mcp",
    "docs",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
# skills/, prompts/, tests/ are added to sdist includes as they are
# populated in Phases 1, 6, and 7; an empty include glob errors on some
# hatch versions.

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
    # pytest-asyncio emits a DeprecationWarning about asyncio_mode default
    # changes; we pin the mode explicitly so the warning is noise.
    "ignore::DeprecationWarning:pytest_asyncio",
    "ignore::PendingDeprecationWarning:pytest_asyncio",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length — covered by formatter
]
