[project]
name = "agy-mcp"
version = "0.1.8"
description = "Skill-first, MCP-second bridge from Claude Code / OpenAI Codex to Google Antigravity CLI (agy)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Boulea7" },
]
keywords = [
    "mcp",
    "antigravity",
    "agy",
    "gemini",
    "claude-code",
    "codex",
    "skill",
    "agent",
    "bridge",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.21.2",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
agymcp = "agy_mcp.cli:main"
agy-bridge = "agy_mcp.bridge:main"
agy-doctor = "agy_mcp.doctor:main"
agy-install-skill = "agy_mcp.install:main"

[project.urls]
Homepage = "https://github.com/Boulea7/agy-mcp"
Repository = "https://github.com/Boulea7/agy-mcp"
Issues = "https://github.com/Boulea7/agy-mcp/issues"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agy_mcp"]
# Phase 7 R1 sec P3-4 + Phase 8 sdist audit: belt-and-braces exclude so a
# stray __pycache__, editor scratch file, internal review doc, or platform
# turd cannot land inside the shipped wheel — especially under
# ``src/agy_mcp/_skill_bodies/`` which carries verbatim skill bodies.
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/.DS_Store",
    "**/Thumbs.db",
    # Internal-only docs that must never appear in a release artefact.
    "docs/review-followups.md",
    "docs/reference-review.md",
    "docs/local-test-checklist.md",
    # User-private agent prompts that ship via .gitignore in the repo.
    "CLAUDE.md",
    "AGENTS.md",
    "GEMINI.md",
    # Test fixtures and ref clones — never shipped.
    "tests",
    ".refs",
    ".agy-mcp",
    ".claude",
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
# Whitelist the exact set of paths that ship in a public release. Hatch
# would otherwise pull in dotfiles (``.gitignore``) and every doc under
# ``docs/`` — including review-followups.md which is a 1300-line internal
# audit trail. Phase 8 R2: this list IS the release contract.
include = [
    "src/agy_mcp",
    "docs/architecture.md",
    "docs/cli-capabilities.md",
    "docs/comparison-with-cli-wrappers.md",
    "docs/examples.md",
    "docs/installation.md",
    "docs/output-strategy.md",
    "docs/README_EN.md",
    "docs/README_JA.md",
    "docs/README_ZH-TW.md",
    "docs/release.md",
    "docs/security.md",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/.DS_Store",
    "**/Thumbs.db",
    # Defence-in-depth: even if a glob above expanded too widely, hatch
    # walks excludes last so anything matching here is dropped.
    ".gitignore",
    ".python-version",
    "CLAUDE.md",
    "AGENTS.md",
    "GEMINI.md",
    "docs/review-followups.md",
    "docs/reference-review.md",
    "docs/local-test-checklist.md",
    ".refs",
    ".agy-mcp",
    ".claude",
    "tests",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
    # pytest-asyncio emits a DeprecationWarning about asyncio_mode default
    # changes; we pin the mode explicitly so the warning is noise.
    "ignore::DeprecationWarning:pytest_asyncio",
    "ignore::PendingDeprecationWarning:pytest_asyncio",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Narrow selection: core correctness rules only. Style / opinion rules
# (SIM / UP / RUF / BLE) are intentionally excluded — many are subjective
# (BLE001 catches our deliberate broad-except defensive code) or
# regularly false-positive on subprocess/wrapper projects (S603).
# Style debt can be cleaned in a follow-up sweep.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "B",   # flake8-bugbear (real bug patterns)
]
ignore = [
    "E501",  # line length — covered by formatter
    "B008",  # function-call-in-default-argument — pydantic Field/Path patterns
    "B904",  # raise-without-from-inside-except — wrapper patterns intentionally lose chain
]
